--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:reset:db": "supabase db reset && supabase test db --debug"
   },
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.0.13",
     "@elysiajs/cookie": "latest",
     "@elysiajs/server-timing": "^0.7.1",
     "@elysiajs/swagger": "latest",
@@ -29,6 +30,7 @@
     "elysia": "latest",
     "elysia-helmet": "^1.0.1",
     "elysia-rate-limit": "^2.0.1",
+    "pino-pretty": "^10.3.0",
     "react": "^18.2.0",
     "resend": "^2.0.0"
   },
